[package]
name = "oops-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line client for OOPS"
license = "MIT"

[[bin]]
name = "oops"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
dirs = "5"
comfy-table = "7"
mime_guess = "2"
url = "2"

[profile.release]
strip = true
lto = "thin"
